The Anonymous Twitter Account Project

--- a/_posts/2012-06-26-23-36-the-finding.md
+++ b/_posts/2012-06-26-23-36-the-finding.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "The Finding"
-description: ""
-category: A jaunt with mate
+description: "A jaunt with maté"
+category: writings
 tags: [journal]
 ---
 {% include JB/setup %}
