--- a/_posts/2012-11-06-11-07-matthew-542.md
+++ b/_posts/2012-11-06-11-07-matthew-542.md
@@ -20,22 +20,23 @@ notion). I decided, this morning is as good as any to get over these.
 So, I started reading Matthew. Most of the book passed by with just a
 very raised eyebrow, until I got to this verse, and I had an idea:
 
-> The Book of Matthew, Chapter 5:38-42
-> 38 “You have heard that it was said, ‘Eye for eye, and tooth for tooth.’
-> 39 But I tell you, do not resist an evil person. If anyone slaps you on the right cheek, turn to them the other cheek also. 
-> 40 And if anyone wants to sue you and take your shirt, hand over your coat as well. 
-> 41 If anyone forces you to go one mile, go with them two miles. 
-> <b>42 Give to the one who asks you, and do not turn away from the one who wants to borrow from you.</b>
+> The Book of Matthew, Chapter 5:38-42  
+> 38 “You have heard that it was said, ‘Eye for eye, and tooth for tooth.’  
+> 39 But I tell you, do not resist an evil person. If anyone slaps you on the right cheek, turn to them the other cheek also.  
+> 40 And if anyone wants to sue you and take your shirt, hand over your coat as well.  
+> 41 If anyone forces you to go one mile, go with them two miles.  
+> <b>42 Give to the one who asks you, and do not turn away from the one who wants to borrow from you.</b>  
 
-Needless to say, this is too good an opportunity to miss. So, I've dug
+Needless to say, this is too good an opportunity to miss. So, I dug
 up my paypal donate button from my old site. I then found out that you
 need to be a registered charity to use that, and the chargebacks can be
 annoying, and my 'Shave-the-whales' campaign probably isn't a worthy
 cause. 
 
-So, my paypal name is also my email, richard dot littauer. Please, if you're a <i>true</i> Christian, <u>examine your heart</u>, and <b>give
+So, my paypal name is also my email, richard dot littauer on gmail.  
+Please, if you're a <i>true</i> Christian, <u>examine your heart</u>, and <b>give
 generously</b>. Consider this a formal proposition to all Christians for
-monetary donations. 
+monetary donations.  
 
 If you're an atheist, agnostic, or follower of Shiva, bring some beer
 when you come over and we can all have a good sacrilegious laugh later. 
