--- a/_posts/2012-11-07-19-10-appril.md
+++ b/_posts/2012-11-07-19-10-appril.md
@@ -19,7 +19,7 @@ the blurb from his website.
   
 ---
 
-<a href="http://www.appril.org"><img src="http://richardlitt.github.com/images/appril.png"
+<a href="http://www.appril.org"><img src="https://raw.github.com/RichardLitt/richardlitt.github.com/master/images/appril.png"
 title="www.appril.org" /></a>
 
 About a week before Github launched their build-a-game competition, I was talking to a couple of friends about an idea I had. Github’s competition got our asses into gear.  
