Two new posts and some splash page changes!

--- a/_posts/2012-11-06-11-07-matthew-542.md
+++ b/_posts/2012-11-06-11-07-matthew-542.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Matthew 5:42"
 description: "A request to all Christians in the room"
-category: reading, thoughts
+category: thoughts
 tags: [religion, humanism, christianity]
 ---
 {% include JB/setup %}
