Can't even remember the name.

--- a/_posts/2013-07-27-23-42-laserspews.md
+++ b/_posts/2013-07-27-23-42-laserspews.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Laserpews"
+title: "Laserspews"
 description: "I wish pews were lasers"
 category: art
 tags: [art, movies, projects]
