--- a/_posts/2013-12-14-11-47-copyright.md
+++ b/_posts/2013-12-14-11-47-copyright.md
@@ -1,24 +1,25 @@
 ---
 layout: post
-title: "Copyright"
+title: "Poem: Copyright"
 description: "A poem"
 category: writing
 tags: [poetry]
 ---
 {% include JB/setup %}
 
-Poem: ©
 
 ```
-I can never remember the alt key for the copyright symbol.
-I looked it up.
-It's alt + g. 
 
-I'm gonna write that in a poem.
-And by write it in a poem
-I mean open up a text editor
-And type that one line.
-And this one, I guess. 
+I can never remember the alt key for the © symbol.  
+I looked it up.  
+It's alt + g.   
 
-I'm going to put this on my blog now. 
+I'm gonna write that in a poem.  
+And by write it in a poem  
+I mean open up a text editor  
+And type that one line.  
+And this one, I guess.   
+
+I'm going to put this on my blog now.   
+
 ```
