--- a/_posts/2013-12-14-11-47-copyright.md
+++ b/_posts/2013-12-14-11-47-copyright.md
@@ -7,9 +7,9 @@ tags: [poetry]
 ---
 {% include JB/setup %}
 
+This is a poem.
 
 ```
-
 I can never remember the alt key for the © symbol.  
 I looked it up.  
 It's alt + g.   
@@ -21,5 +21,4 @@ And type that one line.
 And this one, I guess.   
 
 I'm going to put this on my blog now.   
-
 ```
