--- a/_posts/2013-12-14-11-47-copyright.md
+++ b/_posts/2013-12-14-11-47-copyright.md
@@ -10,7 +10,7 @@ tags: [poetry]
 This is a poem.
 
 ```
-I can never remember the alt key for the \u00A9 symbol.  
+I can never remember the alt key for the &copy; symbol.  
 I looked it up.  
 It's alt + g.   
 
