Removed code blocks.

--- a/_posts/2013-12-14-11-47-copyright.md
+++ b/_posts/2013-12-14-11-47-copyright.md
@@ -7,18 +7,20 @@ tags: [poetry]
 ---
 {% include JB/setup %}
 
-This is a poem.
 
-```
-I can never remember the alt key for the &copy; symbol.  
-I looked it up.  
-It's alt + g.   
-
-I'm gonna write that in a poem.  
-And by write it in a poem  
-I mean open up a text editor  
-And type that one line.  
-And this one, I guess.   
-
-I'm going to put this on my blog now.   
-```
+> I can never remember the alt key for the &copy; symbol.  
+> I looked it up.  
+> It's alt + g.   
+> 
+> I'm gonna write that in a poem.  
+> And by write it in a poem  
+> I mean open up a text editor  
+> And type that one line.  
+> And this one, I guess.   
+> 
+> I'm going to put this on my blog now.   
+> And by put it on my blog,
+> I mean spend thirty minutes trying to get Ruby
+> To understand the copyright symbol in Markdown
+> I think it's ampersand copy semicolon
+> But I can't remember
