--- a/_posts/2013-12-16-09-08-things-done.md
+++ b/_posts/2013-12-16-09-08-things-done.md
@@ -2,8 +2,8 @@
 layout: post
 title: "Things done"
 description: ""
-category: 
-tags: []
+category: thoughts
+tags: [journal, to dos]
 ---
 {% include JB/setup %}
 
