--- a/_posts/2013-12-16-09-08-things-done.md
+++ b/_posts/2013-12-16-09-08-things-done.md
@@ -10,8 +10,8 @@ tags: [journal, to dos]
 As I was cleaning up my desktop this morning, waiting for some program to install work work, I ran across a document I made a couple of days after Thanksgiving, titled `things done`. This was it:
 
 - Updated UKLO website
-- Wrote [redacted] about her article.
-- Wrote David [redacted]
+- Wrote redacted about her article.
+- Wrote David redacted
 - Got some new albums
 - i Wrote Pete about about page
 - i Wrote Gergo about video icon and deployment
