--- a/_posts/2012-06-04-14-01-beyond-n-grams.md
+++ b/_posts/2012-06-04-14-01-beyond-n-grams.md
@@ -11,16 +11,16 @@ I've been reading through some of the papers on [Martin Kay's website](http://ww
 
 > But could it be that the standard statistic is not only difficult to
 > use, but also not the best one for the job? A very different one,
-> which may be easier to use is the probability of the substring, _given
-> the bag of words that make it up._ In other words, it is the number of
+> which may be easier to use is the probability of the substring, given
+> the bag of words that make it up. In other words, it is the number of
 > instances of the substring in the training data, divided by the number
 > of sentences that contain all of the words in it.  
 
-> Consider a string _S_ that contains substrings _s1,s2...sk_, all of
+> Consider a string S that contains substrings s1,s2...sk, all of
 > which are also substrings of the training corpus, that are maximal
-> with respect to _S_. Might the figure of merit of the substrings _f1,
-> f2...fk_, be assinging in such a way that the fom of _S_ would be _f1
-> + f2...+fk_, or something comparably simple?
+> with respect to S. Might the figure of merit of the substrings f1,
+> f2...fk, be assinging in such a way that the fom of S would be f1
+> + f2...+fk, or something comparably simple?
 
 I think this is the right reasoning, but I also think it may not go far
 enough. One of the interesting things about the _n_-gram model is that
