--- a/_posts/2014-09-21-22-50-journall.md
+++ b/_posts/2014-09-21-22-50-journall.md
@@ -7,9 +7,9 @@ tags: [projects, code]
 ---
 {% include JB/setup %}
 
-Yesterday I published my first two NPM packages. [natural-gutenberg](https://www.npmjs.org/package/natural-gutenberg) is a collection of around 20 creative commons texts used in the NLTK python library, now available as node packages so that people using [natural](https://github.com/NaturalNode/natural) can use them to. The second one, which is more interesting, is [journall](https://github.com/RichardLitt/journall-public). 
+Yesterday I published my first two NPM packages. [natural-gutenberg](https://www.npmjs.org/package/natural-gutenberg) is a collection of around 20 creative commons texts used in the NLTK python library, now available as node packages so that people using [natural](https://github.com/NaturalNode/natural) can use them too. The second one, which is more interesting, is [journall](https://github.com/RichardLitt/journall-public). 
 
-I take a lot of notes. I carry around four notebooks with my at all times, five if you count my laptop: one for my drawings (I used to have a webcomic for two years), one for long form writing, one for short form writing that is pocket size, and one that is the size of a passport that I plan to mail to an old friend of mine when I finally finish writing in it. 
+I take a lot of notes. I carry around four notebooks with me at all times, five if you count my laptop: one for my drawings (I used to have a webcomic for two years), one for long form writing, one for short form writing that is pocket size, and one that is the size of a passport that I plan to mail to an old friend of mine when I finally finish writing in it. 
 
 You can imagine what my computer looks like. Tons of files, everywhere, scattered on the Desktop, in a folder called To Do, on Trello, in Documents, in a folder called Writings, and just randomly around. What I need is organization: a place I can quickly scribble things without thinking about where they end up. So, I made Journall, a small script that does that.
 
