--- a/_posts/2015-01-04-11-58-books-from-2014.md
+++ b/_posts/2015-01-04-11-58-books-from-2014.md
@@ -33,7 +33,7 @@ I read a lot. This year was no exception. I failed to keep a list, and I moved f
  * Sean Patrick - **Nikola Tesla** _Don't download free books from iTunes people_
  * Penny Arcade - **Epic Legends of the Magic Sword Kings** _Did not age well_
  * Gary Snyder - **Turtle Island**
- * Gary Snyder - **The Real Work** _This was incredibly, equally as good as my favourite book of his,_ The Practice of the Wilde
+ * Gary Snyder - **The Real Work** _This was incredibly, equally as good as my favourite book of his,_ The Practice of the Wild
  * Gary Snyder - **The Back Country** _You know, I don't think I like Snyder's poetry all that much_
  * Elizabeth George Speare - **The Sign of the Beaver** _Reading young adult books in old age is amusing_
  * Neal Stephenson - **Snow Crash** _Amusing_
