Removed hour, cat,  minutes from permalink

--- a/_posts/2015-01-04-books-from-2014.md
+++ b/_posts/2015-01-04-books-from-2014.md
@@ -4,6 +4,7 @@ title: "Books from 2014"
 description: "A read list"
 category: journal
 tags: [journal, books]
+date: 2015-01-04-12-08
 ---
 {% include JB/setup %}
 
