Added Interaction Design and prince caspian

--- a/_posts/2015-01-04-books-from-2014.md
+++ b/_posts/2015-01-04-books-from-2014.md
@@ -26,13 +26,15 @@ I read a lot. This year was no exception. I failed to keep a list, and I moved f
  * Daniel Keyes - **Flowers for Algernon** _Made me cry_
  * Martin Luther King Jr. - **Where Do We Go From Here: Chaos or Community** _Fantastic and still very pertinent read_
  * CS Lewis - **The Great Divorce** _Worst book ever_
+ * CS Lewis - **Prince Caspian** _So, apparently, Lewis was incredibly sexist_
  * Lois Lowry - **The Giver**
  * Alice Miller - **The Drama of the Gifted Child** _No comment_
  * Yukio Mishima - **The Sound of Waves** _My favorite Japanese author. Astoundingly good_
  * John Myers Myers - **Silverlock** _Someone published this?_
  * Ryan North - **B to the F: The Novelization of the Feature Film: Ryan North reviews George Gipe's insane novelization of the major motion picture** _If you want to laugh, this was the funniest book I have ever read_
  * Sean Patrick - **Nikola Tesla** _Don't download free books from iTunes people_
- * Penny Arcade - **Epic Legends of the Magic Sword Kings** _Did not age well_
+ * Penny Arcade - **Epic Legends of the Magic Sword Kings** _Did not age well_\
+ * Rogers, Sharp, Preece - **Interaction Design** _This was a very good introduction to design and UI and I actually thoroughly enjoyed it_
  * Gary Snyder - **Turtle Island**
  * Gary Snyder - **The Real Work** _This was incredibly, equally as good as my favourite book of his,_ The Practice of the Wild
  * Gary Snyder - **The Back Country** _You know, I don't think I like Snyder's poetry all that much_
