--- a/_posts/2015-04-30-100-days-of-code.md
+++ b/_posts/2015-04-30-100-days-of-code.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: "100 Days of Code"
-description: ""
-category: 
-tags: []
+description: "On my GitHub coding streak"
+category: coding
+tags: [coding, journal]
 date: 2015-04-30-17-13
 ---
 {% include JB/setup %}
