--- a/_posts/2012-05-28-14-07-marathon-cafe.md
+++ b/_posts/2012-05-28-14-07-marathon-cafe.md
@@ -12,7 +12,7 @@ wanted to start a blog talking about all of the different cafés I've
 been to, but I haven't gotten around to it yet. As this blog as so easy
 to push, this post is going here, although it may eventually go on a new
 blog, or maybe even on my old [Edinburgh
-Cafes](http://www.edinburghcafes.com) blog, which is really only for
+Cafes](http://www.edinburghcafes.blogspot.com) blog, which is really only for
 cafes in Edinburgh.
 
 So, here's the run down:
