--- a/books/2016.md
+++ b/books/2016.md
@@ -6,6 +6,8 @@ description: "A list of books I read in 2016  "
 ---
 {% include JB/setup %}
 
-* [The Left Hand of Darkness]() by Ursula Le Guin
-* [Speaker for the Dead]() by Orson Scott Card
-* [Bridge to Terabithia]() by Katherine Paterson
+* [The Left Hand of Darkness](https://en.wikipedia.org/wiki/The_Left_Hand_of_Darkness) by Ursula Le Guin.
+  - This was a good book to read while travelling between Svalbard, Oslo, and Iceland, seeing as how it is set on a winter world.
+* [Speaker for the Dead](https://en.wikipedia.org/wiki/Speaker_for_the_Dead) by Orson Scott Card.
+  - After reading this, I plan to insist that that someone is a Speaker at my funeral. Incredibly moving.
+* [Bridge to Terabithia](https://en.wikipedia.org/wiki/Bridge_to_Terabithia_(novel)) by Katherine Paterson.
