Added I Could Pee On This

--- a/books/2016.md
+++ b/books/2016.md
@@ -13,3 +13,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Speaker for the Dead](https://en.wikipedia.org/wiki/Speaker_for_the_Dead) by Orson Scott Card.
   - After reading this, I plan to insist that that someone is a Speaker at my funeral. Incredibly moving.
 * [Bridge to Terabithia](https://en.wikipedia.org/wiki/Bridge_to_Terabithia_(novel)) by Katherine Paterson.
+* [I Could Pee On This (And Other Poems by Cats)](http://www.amazon.com/Could-Pee-This-Other-Poems/dp/1452110581) by Francesco Marciuliano
