Added Scott Pilgrim

--- a/books/2016.md
+++ b/books/2016.md
@@ -14,3 +14,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
   - After reading this, I plan to insist that that someone is a Speaker at my funeral. Incredibly moving.
 * [Bridge to Terabithia](https://en.wikipedia.org/wiki/Bridge_to_Terabithia_(novel)) by Katherine Paterson.
 * [I Could Pee On This (And Other Poems by Cats)](http://www.amazon.com/Could-Pee-This-Other-Poems/dp/1452110581) by Francesco Marciuliano
+* [Scott Pilgrim's Precious Little Life](https://en.wikipedia.org/wiki/Scott_Pilgrim#Scott_Pilgrim.27s_Precious_Little_Life_.28Volume_1.29) by Bryan Lee O'Malley
