Added Where The Wild Things Are, Chronicle of a Death Foretold

--- a/books/2016.md
+++ b/books/2016.md
@@ -17,3 +17,6 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Scott Pilgrim Vol I-VI](https://en.wikipedia.org/wiki/Scott_Pilgrim) by Bryan Lee O'Malley
 * [Ready Player One](https://en.wikipedia.org/wiki/Ready_Player_One) by Ernest Cline.
   - This was the most AWESOME book EVER. I immediately started listening to it again.
+* [Where the Wild Things Are](https://en.wikipedia.org/wiki/Where_the_Wild_Things_Are) by Maurice Sendak
+* [Chronicle of a Death Foretold](https://en.wikipedia.org/wiki/Chronicle_of_a_Death_Foretold) by Gabriel García Márquez.
+  - This was a beautiful little tale.
