--- a/books/2016.md
+++ b/books/2016.md
@@ -20,3 +20,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Where the Wild Things Are](https://en.wikipedia.org/wiki/Where_the_Wild_Things_Are) by Maurice Sendak
 * [Chronicle of a Death Foretold](https://en.wikipedia.org/wiki/Chronicle_of_a_Death_Foretold) by Gabriel García Márquez.
   - This was a beautiful little tale.
+* [A Geologist's View of Cape Cod](http://www.amazon.com/A-Geologists-View-Cape-Cod/dp/0940160390) by Arthur Strahler.
