--- a/books/2016.md
+++ b/books/2016.md
@@ -13,7 +13,7 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Speaker for the Dead](https://en.wikipedia.org/wiki/Speaker_for_the_Dead) by Orson Scott Card.
   - After reading this, I plan to insist that that someone is a Speaker at my funeral. Incredibly moving.
 * [Bridge to Terabithia](https://en.wikipedia.org/wiki/Bridge_to_Terabithia_(novel)) by Katherine Paterson.
-* [I Could Pee On This (And Other Poems by Cats)](http://www.amazon.com/Could-Pee-This-Other-Poems/dp/1452110581) by Francesco Marciuliano
+* [I Could Pee On This (And Other Poems by Cats)](http://www.amazon.com/Could-Pee-This-Other-Poems/dp/1452110581) and [I Knead My Mommy: And Other Poems by Kittens](http://www.amazon.com/Knead-My-Mommy-Other-Kittens/dp/1452132917) by Francesco Marciuliano
 * [Scott Pilgrim Vol I-VI](https://en.wikipedia.org/wiki/Scott_Pilgrim) by Bryan Lee O'Malley
 * [Ready Player One](https://en.wikipedia.org/wiki/Ready_Player_One) by Ernest Cline.
   - This was the most AWESOME book EVER. I immediately started listening to it again.
