--- a/books/2016.md
+++ b/books/2016.md
@@ -16,7 +16,7 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [I Could Pee On This (And Other Poems by Cats)](http://www.amazon.com/Could-Pee-This-Other-Poems/dp/1452110581) and [I Knead My Mommy: And Other Poems by Kittens](http://www.amazon.com/Knead-My-Mommy-Other-Kittens/dp/1452132917) by Francesco Marciuliano
 * [Scott Pilgrim Vol I-VI](https://en.wikipedia.org/wiki/Scott_Pilgrim) by Bryan Lee O'Malley
 * [Ready Player One](https://en.wikipedia.org/wiki/Ready_Player_One) by Ernest Cline.
-  - This was the most AWESOME book EVER. I immediately started listening to it again.
+  - This was the most AWESOME book EVER. I immediately started listening to it again. I have now read it twice.
 * [Where the Wild Things Are](https://en.wikipedia.org/wiki/Where_the_Wild_Things_Are) by Maurice Sendak
 * [Chronicle of a Death Foretold](https://en.wikipedia.org/wiki/Chronicle_of_a_Death_Foretold) by Gabriel García Márquez.
   - This was a beautiful little tale.
