--- a/books/2016.md
+++ b/books/2016.md
@@ -21,3 +21,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Chronicle of a Death Foretold](https://en.wikipedia.org/wiki/Chronicle_of_a_Death_Foretold) by Gabriel García Márquez.
   - This was a beautiful little tale.
 * [A Geologist's View of Cape Cod](http://www.amazon.com/A-Geologists-View-Cape-Cod/dp/0940160390) by Arthur Strahler.
+* [Welcome to the NHK (Vol I)](https://en.wikipedia.org/wiki/Welcome_to_the_N.H.K.) by Tatsuhiko Takimoto, Kendi Oiwa.
