Added `Voyage of the Beagle`

--- a/books/2016.md
+++ b/books/2016.md
@@ -22,3 +22,5 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
   - This was a beautiful little tale.
 * [A Geologist's View of Cape Cod](http://www.amazon.com/A-Geologists-View-Cape-Cod/dp/0940160390) by Arthur Strahler.
 * [Welcome to the NHK (Vol I)](https://en.wikipedia.org/wiki/Welcome_to_the_N.H.K.) by Tatsuhiko Takimoto, Kendi Oiwa.
+* [Voyage of the Beagle](http://www.amazon.com/The-Voyage-Beagle-Researches-Classics/dp/014043268X) by Charles Darwin.
+  - An extraordinary book, which rarely bored, was constantly illuminating, and showed the brilliance and breadth of Darwin's mind.
