--- a/books/2016.md
+++ b/books/2016.md
@@ -25,3 +25,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Voyage of the Beagle](http://www.amazon.com/The-Voyage-Beagle-Researches-Classics/dp/014043268X) by Charles Darwin.
   - An extraordinary book, which rarely bored, was constantly illuminating, and showed the brilliance and breadth of Darwin's mind.
 * [Thomas Jefferson: The Art of Power](http://www.amazon.com/Thomas-Jefferson-The-Art-Power/dp/0812979486) by Jon Meacham.
+* [Saga (Vol I)](https://en.wikipedia.org/wiki/Saga_(comic_book)) by Brian K. Vaughan and Fiona Staples.
