Added Belle and Origin

--- a/books/2016.md
+++ b/books/2016.md
@@ -26,3 +26,5 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
   - An extraordinary book, which rarely bored, was constantly illuminating, and showed the brilliance and breadth of Darwin's mind.
 * [Thomas Jefferson: The Art of Power](http://www.amazon.com/Thomas-Jefferson-The-Art-Power/dp/0812979486) by Jon Meacham.
 * [Saga (Vol I)](https://en.wikipedia.org/wiki/Saga_(comic_book)) by Brian K. Vaughan and Fiona Staples.
+* [Put the Book Back on the Shelf: A Belle & Sebastian Anthology](https://en.wikipedia.org/wiki/Put_the_Book_Back_on_the_Shelf)
+* [Origin: The True Story of Wolverine](https://en.wikipedia.org/wiki/Origin_(comics))
