Read Jacob Have I loved

--- a/books/2016.md
+++ b/books/2016.md
@@ -28,3 +28,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Saga (Vol I)](https://en.wikipedia.org/wiki/Saga_(comic_book)) by Brian K. Vaughan and Fiona Staples.
 * [Put the Book Back on the Shelf: A Belle & Sebastian Anthology](https://en.wikipedia.org/wiki/Put_the_Book_Back_on_the_Shelf)
 * [Origin: The True Story of Wolverine](https://en.wikipedia.org/wiki/Origin_(comics))
+* [Jacob Have I Loved](https://en.wikipedia.org/wiki/Jacob_Have_I_Loved) by Katherine Paterson.
