--- a/books/2016.md
+++ b/books/2016.md
@@ -29,3 +29,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Put the Book Back on the Shelf: A Belle & Sebastian Anthology](https://en.wikipedia.org/wiki/Put_the_Book_Back_on_the_Shelf)
 * [Origin: The True Story of Wolverine](https://en.wikipedia.org/wiki/Origin_(comics))
 * [Jacob Have I Loved](https://en.wikipedia.org/wiki/Jacob_Have_I_Loved) by Katherine Paterson.
+* [Endgame: Bobby Fischer's Remarkable Rise and Fall - from America's Brightest Prodigy to the Edge of Madness](http://www.amazon.com/Endgame-Fischers-Remarkable-Americas-Brightest/dp/0307463915) by Frank Brady.
