Added `Ender in Exile`

--- a/books/2016.md
+++ b/books/2016.md
@@ -30,3 +30,5 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Origin: The True Story of Wolverine](https://en.wikipedia.org/wiki/Origin_(comics))
 * [Jacob Have I Loved](https://en.wikipedia.org/wiki/Jacob_Have_I_Loved) by Katherine Paterson.
 * [Endgame: Bobby Fischer's Remarkable Rise and Fall - from America's Brightest Prodigy to the Edge of Madness](http://www.amazon.com/Endgame-Fischers-Remarkable-Americas-Brightest/dp/0307463915) by Frank Brady.
+* [Ender in Exile](https://en.wikipedia.org/wiki/Ender_in_Exile) by Orson Scott Card.
+  - This kept me up until 4am. OSC is incredible.
