Added The Lies of Locke Lamora

--- a/books/2016.md
+++ b/books/2016.md
@@ -32,4 +32,6 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Endgame: Bobby Fischer's Remarkable Rise and Fall - from America's Brightest Prodigy to the Edge of Madness](http://www.amazon.com/Endgame-Fischers-Remarkable-Americas-Brightest/dp/0307463915) by Frank Brady.
 * [Ender in Exile](https://en.wikipedia.org/wiki/Ender_in_Exile) by Orson Scott Card.
   - This kept me up until 4am. OSC is incredible.
-* [Sylverhawk](http://www.amazon.com/Sylverhawk-Geoff-Gilson-ebook/dp/B01328HYBO) By Geoff Gilson.
+* [Sylverhawk](http://www.amazon.com/Sylverhawk-Geoff-Gilson-ebook/dp/B01328HYBO) by Geoff Gilson.
+* [The Lies of Locke Lamora](https://en.wikipedia.org/wiki/The_Lies_of_Locke_Lamora) by Scott Lynch.
+  - What an incredible tale. I loved it.
