Added Trigger Warning

--- a/books/2016.md
+++ b/books/2016.md
@@ -35,3 +35,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Sylverhawk](http://www.amazon.com/Sylverhawk-Geoff-Gilson-ebook/dp/B01328HYBO) by Geoff Gilson.
 * [The Lies of Locke Lamora](https://en.wikipedia.org/wiki/The_Lies_of_Locke_Lamora) by Scott Lynch.
   - What an incredible tale. I loved it.
+* [Trigger Warning](http://www.nytimes.com/2015/03/08/books/review/neil-gaimans-trigger-warning.html) by Neil Gaiman.
