Added Enders Game

--- a/books/2016.md
+++ b/books/2016.md
@@ -36,3 +36,5 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [The Lies of Locke Lamora](https://en.wikipedia.org/wiki/The_Lies_of_Locke_Lamora) by Scott Lynch.
   - What an incredible tale. I loved it.
 * [Trigger Warning](http://www.nytimes.com/2015/03/08/books/review/neil-gaimans-trigger-warning.html) by Neil Gaiman.
+* [Ender's Game](https://en.wikipedia.org/wiki/Ender%27s_Game) by Orson Scott Card.
+  - I love this. Everytime I start it I can't stop for 4 hours.
