Add I Am America

--- a/books/2016.md
+++ b/books/2016.md
@@ -38,3 +38,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Trigger Warning](http://www.nytimes.com/2015/03/08/books/review/neil-gaimans-trigger-warning.html) by Neil Gaiman.
 * [Ender's Game](https://en.wikipedia.org/wiki/Ender%27s_Game) by Orson Scott Card.
   - I love this. Everytime I start it I can't stop for 4 hours.
+* [I Am America (And So Can You!)](https://en.wikipedia.org/wiki/I_Am_America_(And_So_Can_You!)) by Stephen Colbert.
