--- a/books/2016.md
+++ b/books/2016.md
@@ -39,3 +39,5 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Ender's Game](https://en.wikipedia.org/wiki/Ender%27s_Game) by Orson Scott Card.
   - I love this. Everytime I start it I can't stop for 4 hours.
 * [I Am America (And So Can You!)](https://en.wikipedia.org/wiki/I_Am_America_(And_So_Can_You!)) by Stephen Colbert.
+* [Have Space Suit, Will Travel](https://en.wikipedia.org/wiki/Have_Space_Suit%E2%80%94Will_Travel) by Robert Heinlein.
+* [The War of Art](https://en.wikipedia.org/wiki/The_War_of_Art_(book)) by Steven Pressfield.
