Added Lock In, and the Horse and his Boy

--- a/books/2016.md
+++ b/books/2016.md
@@ -42,3 +42,5 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Have Space Suit, Will Travel](https://en.wikipedia.org/wiki/Have_Space_Suit%E2%80%94Will_Travel) by Robert Heinlein.
 * [The War of Art](https://en.wikipedia.org/wiki/The_War_of_Art_(book)) by Steven Pressfield.
 * [Xenocide](https://en.wikipedia.org/wiki/Xenocide) by Orson Scott Card.
+* [Lock In](https://en.wikipedia.org/wiki/Lock_In) by John Scalzi.
+* [The Horse and his Boy](https://en.wikipedia.org/wiki/The_Horse_and_His_Boy) by C.S. Lewis.
