--- a/books/2016.md
+++ b/books/2016.md
@@ -41,6 +41,9 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [I Am America (And So Can You!)](https://en.wikipedia.org/wiki/I_Am_America_(And_So_Can_You!)) by Stephen Colbert.
 * [Have Space Suit, Will Travel](https://en.wikipedia.org/wiki/Have_Space_Suit%E2%80%94Will_Travel) by Robert Heinlein.
 * [The War of Art](https://en.wikipedia.org/wiki/The_War_of_Art_(book)) by Steven Pressfield.
+  - Incredible. Disregard the Christian mysticism, though.
 * [Xenocide](https://en.wikipedia.org/wiki/Xenocide) by Orson Scott Card.
 * [Lock In](https://en.wikipedia.org/wiki/Lock_In) by John Scalzi.
 * [The Horse and his Boy](https://en.wikipedia.org/wiki/The_Horse_and_His_Boy) by C.S. Lewis.
+* [The Conquest of Happiness](http://russell-j.com/beginner/COH-TEXT.HTM) by Bertrand Russell.
+  - A good book, if you want to see how an aristocrat sees the world.
