Added `How to Win Friends and Influence People`

--- a/books/2016.md
+++ b/books/2016.md
@@ -47,3 +47,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [The Horse and his Boy](https://en.wikipedia.org/wiki/The_Horse_and_His_Boy) by C.S. Lewis.
 * [The Conquest of Happiness](http://russell-j.com/beginner/COH-TEXT.HTM) by Bertrand Russell.
   - A good book, if you want to see how an aristocrat sees the world.
+* [How to Win Friends and Influence People](https://en.wikipedia.org/wiki/How_to_Win_Friends_and_Influence_People) by Dale Carnegie.
