Added Chew on This;

--- a/books/2016.md
+++ b/books/2016.md
@@ -13,8 +13,8 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Speaker for the Dead](https://en.wikipedia.org/wiki/Speaker_for_the_Dead) by Orson Scott Card.
   - After reading this, I plan to insist that that someone is a Speaker at my funeral. Incredibly moving.
 * [Bridge to Terabithia](https://en.wikipedia.org/wiki/Bridge_to_Terabithia_(novel)) by Katherine Paterson.
-* [I Could Pee On This (And Other Poems by Cats)](http://www.amazon.com/Could-Pee-This-Other-Poems/dp/1452110581) and [I Knead My Mommy: And Other Poems by Kittens](http://www.amazon.com/Knead-My-Mommy-Other-Kittens/dp/1452132917) by Francesco Marciuliano
-* [Scott Pilgrim Vol I-VI](https://en.wikipedia.org/wiki/Scott_Pilgrim) by Bryan Lee O'Malley
+* [I Could Pee On This (And Other Poems by Cats)](http://www.amazon.com/Could-Pee-This-Other-Poems/dp/1452110581), [I Knead My Mommy: And Other Poems by Kittens](http://www.amazon.com/Knead-My-Mommy-Other-Kittens/dp/1452132917), and [I Could Chew On This: And Other Poems By Dogs](http://www.amazon.com/Could-Chew-This-Other-Poems/dp/1452119031) by Francesco Marciuliano.
+* [Scott Pilgrim Vol I-VI](https://en.wikipedia.org/wiki/Scott_Pilgrim) by Bryan Lee O'Malley.
 * [Ready Player One](https://en.wikipedia.org/wiki/Ready_Player_One) by Ernest Cline.
   - This was the most AWESOME book EVER. I immediately started listening to it again. I have now read it twice.
 * [Where the Wild Things Are](https://en.wikipedia.org/wiki/Where_the_Wild_Things_Are) by Maurice Sendak
