Added Big Sur and Green Knight

--- a/books/2016.md
+++ b/books/2016.md
@@ -48,3 +48,7 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [The Conquest of Happiness](http://russell-j.com/beginner/COH-TEXT.HTM) by Bertrand Russell.
   - A good book, if you want to see how an aristocrat sees the world.
 * [How to Win Friends and Influence People](https://en.wikipedia.org/wiki/How_to_Win_Friends_and_Influence_People) by Dale Carnegie.
+* [Big Sur](https://en.wikipedia.org/wiki/Big_Sur_(novel)) by Jack Kerouac.
+* [Sir Gawain and the Green Knight](https://en.wikipedia.org/wiki/Sir_Gawain_and_the_Green_Knight).
+  - I read this book every year or so; one of the best long poems we have. I absolutely love it. Also, I am writing this in front of my campfire in a state park near Santa Cruz. So, you know, that's pretty awesome.
+
