Added Wolfe, Norton, Feynman

--- a/books/2016.md
+++ b/books/2016.md
@@ -51,4 +51,8 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Big Sur](https://en.wikipedia.org/wiki/Big_Sur_(novel)) by Jack Kerouac.
 * [Sir Gawain and the Green Knight](https://en.wikipedia.org/wiki/Sir_Gawain_and_the_Green_Knight).
   - I read this book every year or so; one of the best long poems we have. I absolutely love it. Also, I am writing this in front of my campfire in a state park near Santa Cruz. So, you know, that's pretty awesome.
-
+* [The Knight](https://en.wikipedia.org/wiki/The_Knight_(novel)) by Gene Wolfe.
+  - I read this around once a year. Pretty much all I've ever wanted or needed in a story.
+* [The Crossroads of Time](http://www.amazon.com/Crossroads-Time-Andre-Norton/dp/0441123163) by Andre Norton.
+  - My God this book was awful. It wasn't even proofread.
+* [What Do You Care What Other People Think?](https://en.wikipedia.org/wiki/What_Do_You_Care_What_Other_People_Think%3F) by Richard Feynman.
