--- a/books/2016.md
+++ b/books/2016.md
@@ -56,3 +56,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [The Crossroads of Time](http://www.amazon.com/Crossroads-Time-Andre-Norton/dp/0441123163) by Andre Norton.
   - My God this book was awful. It wasn't even proofread.
 * [What Do You Care What Other People Think?](https://en.wikipedia.org/wiki/What_Do_You_Care_What_Other_People_Think%3F) by Richard Feynman.
+* [Wabi-Sabi for Artists, Designers, Poets & Philosophers](http://www.amazon.com/Wabi-Sabi-Artists-Designers-Poets-Philosophers/dp/0981484603)
