--- a/books/2016.md
+++ b/books/2016.md
@@ -57,3 +57,5 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
   - My God this book was awful. It wasn't even proofread.
 * [What Do You Care What Other People Think?](https://en.wikipedia.org/wiki/What_Do_You_Care_What_Other_People_Think%3F) by Richard Feynman.
 * [Wabi-Sabi for Artists, Designers, Poets & Philosophers](http://www.amazon.com/Wabi-Sabi-Artists-Designers-Poets-Philosophers/dp/0981484603)
+* [The Pearl](https://en.wikipedia.org/wiki/The_Pearl_(novel)) by John Steinbeck.
+* [The Pet Dragon](http://www.amazon.com/Pet-Dragon-Adventure-Friendship-Characters/dp/0061577766) by Christoph Niemann.
