--- a/books/2016.md
+++ b/books/2016.md
@@ -59,3 +59,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Wabi-Sabi for Artists, Designers, Poets & Philosophers](http://www.amazon.com/Wabi-Sabi-Artists-Designers-Poets-Philosophers/dp/0981484603)
 * [The Pearl](https://en.wikipedia.org/wiki/The_Pearl_(novel)) by John Steinbeck.
 * [The Pet Dragon](http://www.amazon.com/Pet-Dragon-Adventure-Friendship-Characters/dp/0061577766) by Christoph Niemann.
+* [Zits](http://www.bookdepository.com/Zits-Jerry-Scott-Jim-Borgman-Prue-Scott/9780836268256?ref=bd_ser_1) by Jerry Scott, Prue Scott, Jim Borgman.
