--- a/books/2016.md
+++ b/books/2016.md
@@ -60,3 +60,5 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [The Pearl](https://en.wikipedia.org/wiki/The_Pearl_(novel)) by John Steinbeck.
 * [The Pet Dragon](http://www.amazon.com/Pet-Dragon-Adventure-Friendship-Characters/dp/0061577766) by Christoph Niemann.
 * [Zits](http://www.bookdepository.com/Zits-Jerry-Scott-Jim-Borgman-Prue-Scott/9780836268256?ref=bd_ser_1) by Jerry Scott, Prue Scott, Jim Borgman.
+* [1984](https://en.wikipedia.org/wiki/Nineteen_Eighty-Four) by George Orwell.
+  - First time reading this. Was even more depressing than I expected.
