--- a/books/2016.md
+++ b/books/2016.md
@@ -64,3 +64,6 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
   - What a weird and beautiful book.
 * [1984](https://en.wikipedia.org/wiki/Nineteen_Eighty-Four) by George Orwell.
   - First time reading this. Was even more depressing than I expected.
+* [Travels with a Donkey in the Cévennes](https://en.wikipedia.org/wiki/Travels_with_a_Donkey_in_the_C%C3%A9vennes) by Robert Louis Stevenson.
+* [The Once and Future King](https://en.wikipedia.org/wiki/The_Once_and_Future_King) by T.H. White.
+  - I can't believe it took me so long to read this book. Incredible.
