--- a/books/2016.md
+++ b/books/2016.md
@@ -67,3 +67,6 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Travels with a Donkey in the Cévennes](https://en.wikipedia.org/wiki/Travels_with_a_Donkey_in_the_C%C3%A9vennes) by Robert Louis Stevenson.
 * [The Once and Future King](https://en.wikipedia.org/wiki/The_Once_and_Future_King) by T.H. White.
   - I can't believe it took me so long to read this book. Incredible.
+* [Solaris](https://en.wikipedia.org/wiki/Solaris_(novel) by Stanisław Lem.
+  - I was excited to finally read this, as I've loved the newer film for years, and recently saw the Tarkovsky film. It was worth the read.
+
