--- a/books/2016.md
+++ b/books/2016.md
@@ -70,3 +70,4 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Solaris](https://en.wikipedia.org/wiki/Solaris_(novel)) by Stanisław Lem.
   - I was excited to finally read this, as I've loved the newer film for years, and recently saw the Tarkovsky film. It was worth the read.
 * [The Anatomy of Restlessness](https://www.amazon.com/Anatomy-Restlessness-Selected-Writings-1969-1989/dp/0140256989) by Bruce Chatwin.
+* [The Goldfinch](https://www.amazon.com/Goldfinch-Novel-Pulitzer-Prize-Fiction/dp/0316055433) by Donna Tartt.
