--- a/books/2016.md
+++ b/books/2016.md
@@ -72,4 +72,5 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [The Anatomy of Restlessness](https://www.amazon.com/Anatomy-Restlessness-Selected-Writings-1969-1989/dp/0140256989) by Bruce Chatwin.
 * [The Goldfinch](https://www.amazon.com/Goldfinch-Novel-Pulitzer-Prize-Fiction/dp/0316055433) by Donna Tartt.
 * [The Allow of Law](https://www.amazon.com/Alloy-Law-Mistborn-Novel/dp/0765368544) by Brandon Sanderson.
-* [Habibi](https://www.amazon.com/Habibi-Pantheon-Graphic-Novels-Thompson/dp/0375424148/ref=sr_1_1?s=books&ie=UTF8&qid=1473254331&sr=1-1&keywords=habibi) by Craig Thompson
+* [Habibi](https://www.amazon.com/Habibi-Pantheon-Graphic-Novels-Thompson/dp/0375424148/ref=sr_1_1?s=books&ie=UTF8&qid=1473254331&sr=1-1&keywords=habibi) by Craig Thompson.
+* [The Unbeatable Squirrel Girl](https://en.wikipedia.org/wiki/The_Unbeatable_Squirrel_Girl) by Ryan North and Erica Henderson.
