--- a/books/2016.md
+++ b/books/2016.md
@@ -74,3 +74,9 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [The Allow of Law](https://www.amazon.com/Alloy-Law-Mistborn-Novel/dp/0765368544) by Brandon Sanderson.
 * [Habibi](https://www.amazon.com/Habibi-Pantheon-Graphic-Novels-Thompson/dp/0375424148/ref=sr_1_1?s=books&ie=UTF8&qid=1473254331&sr=1-1&keywords=habibi) by Craig Thompson.
 * [The Unbeatable Squirrel Girl](https://en.wikipedia.org/wiki/The_Unbeatable_Squirrel_Girl) by Ryan North and Erica Henderson.
+
+I am actively looking for cheap copies of these books:
+
+* [The Joy of Living](https://www.amazon.com/Joy-Living-Unlocking-Science-Happiness/dp/0307347311)
+* [Altruism](https://www.amazon.com/Altruism-Power-Compassion-Change-Yourself/dp/031620823X/ref=sr_1_1?s=books&ie=UTF8&qid=1473952415&sr=1-1&keywords=altruism)
+* [The Tibetan Book of Living and Dying](https://www.amazon.com/Tibetan-Book-Living-Dying-International/dp/0062508342/ref=sr_1_1?s=books&ie=UTF8&qid=1473952434&sr=1-1&keywords=tibetan+book+of+living)
