--- a/books/2016.md
+++ b/books/2016.md
@@ -75,6 +75,8 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [Habibi](https://www.amazon.com/Habibi-Pantheon-Graphic-Novels-Thompson/dp/0375424148/ref=sr_1_1?s=books&ie=UTF8&qid=1473254331&sr=1-1&keywords=habibi) by Craig Thompson.
 * [The Unbeatable Squirrel Girl](https://en.wikipedia.org/wiki/The_Unbeatable_Squirrel_Girl) by Ryan North and Erica Henderson.
 * [A Borrowed Man](https://www.amazon.com/Borrowed-Man-Gene-Wolfe/dp/0765381141) by Gene Wolfe.
+* [Storm Front](https://www.amazon.com/Storm-Front-Dresden-Files-Butcher/dp/1480580503) by Jim Butcher.
+* [REAMDE](https://www.amazon.com/Reamde-Novel-Neal-Stephenson/dp/0062191497) by Neal Stephenson.
 
 I am actively looking for these books:
 
