Added two books

--- a/books/2016.md
+++ b/books/2016.md
@@ -77,6 +77,8 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [A Borrowed Man](https://www.amazon.com/Borrowed-Man-Gene-Wolfe/dp/0765381141) by Gene Wolfe.
 * [Storm Front](https://www.amazon.com/Storm-Front-Dresden-Files-Butcher/dp/1480580503) by Jim Butcher.
 * [REAMDE](https://www.amazon.com/Reamde-Novel-Neal-Stephenson/dp/0062191497) by Neal Stephenson.
+* [Small Memories](http://www.nytimes.com/2011/05/11/books/small-memories-by-jose-saramago-review.html) by José Saramago.
+* [Mayakovsky's Revolver](http://www.powells.com/SearchResults?kw=title:mayakovsky%27s%20revolver) by Matthew Dickman.
 
 I am actively looking for these books:
 
