Added Colorless Tsukuru and Orsinian Tales

--- a/books/2016.md
+++ b/books/2016.md
@@ -79,6 +79,12 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
 * [REAMDE](https://www.amazon.com/Reamde-Novel-Neal-Stephenson/dp/0062191497) by Neal Stephenson.
 * [Small Memories](http://www.nytimes.com/2011/05/11/books/small-memories-by-jose-saramago-review.html) by José Saramago.
 * [Mayakovsky's Revolver](http://www.powells.com/SearchResults?kw=title:mayakovsky%27s%20revolver) by Matthew Dickman.
+* [Wake Up Before It Is Too Late: Trade and Environment Review 2013]() by the United Nations Conference on Trade and Development.
+  - A very sobering read, especially as it is a few years old and, to my knowledge, things have only changed for the worst.
+* [Colorless Tsukuru Tazaki and His Years of Pilgrimage](https://en.wikipedia.org/wiki/Colorless_Tsukuru_Tazaki_and_His_Years_of_Pilgrimage) by Haruki Murakami.
+  - A strange book. Not as well done as his others, and with some unresolved narratives that I am not sure were better for it.
+* [Orsinian Tales](https://en.wikipedia.org/wiki/Orsinian_Tales) by Ursula K. Le Guin.
+  - These were beautiful, finely crafted short stories. Rarely for me, I read a few of them immediately after I finished them, to make sure that I got the more subtle details. The writing was absolutely exquisite.
 
 I am actively looking for these books:
 
