--- a/books/2016.md
+++ b/books/2016.md
@@ -81,3 +81,6 @@ I am actively looking for these books:
 * [The Joy of Living](https://www.amazon.com/Joy-Living-Unlocking-Science-Happiness/dp/0307347311)
 * [Altruism](https://www.amazon.com/Altruism-Power-Compassion-Change-Yourself/dp/031620823X/ref=sr_1_1?s=books&ie=UTF8&qid=1473952415&sr=1-1&keywords=altruism)
 * [The Tibetan Book of Living and Dying](https://www.amazon.com/Tibetan-Book-Living-Dying-International/dp/0062508342/ref=sr_1_1?s=books&ie=UTF8&qid=1473952434&sr=1-1&keywords=tibetan+book+of+living)
+* [The Intelligent Investory](http://www.smh.com.au/business/markets/21-books-warren-buffett-thinks-you-should-read-20161103-gshv25.html) _recommended by Warren Buffett_
+* [Security Analysis](http://www.smh.com.au/business/markets/21-books-warren-buffett-thinks-you-should-read-20161103-gshv25.html) _"_
+* [Essays in Persuasion](http://www.smh.com.au/business/markets/21-books-warren-buffett-thinks-you-should-read-20161103-gshv25.html) _"_ 
