Added We Learn nothing to books wanted

--- a/books/2016.md
+++ b/books/2016.md
@@ -93,4 +93,5 @@ I am actively looking for these books:
 * [The Tibetan Book of Living and Dying](https://www.amazon.com/Tibetan-Book-Living-Dying-International/dp/0062508342/ref=sr_1_1?s=books&ie=UTF8&qid=1473952434&sr=1-1&keywords=tibetan+book+of+living)
 * [The Intelligent Investory](http://www.smh.com.au/business/markets/21-books-warren-buffett-thinks-you-should-read-20161103-gshv25.html) _recommended by Warren Buffett_
 * [Security Analysis](http://www.smh.com.au/business/markets/21-books-warren-buffett-thinks-you-should-read-20161103-gshv25.html) _"_
-* [Essays in Persuasion](http://www.smh.com.au/business/markets/21-books-warren-buffett-thinks-you-should-read-20161103-gshv25.html) _"_ 
+* [Essays in Persuasion](http://www.smh.com.au/business/markets/21-books-warren-buffett-thinks-you-should-read-20161103-gshv25.html) _"_
+* [We Learn Nothing: Essays](https://www.amazon.ca/We-Learn-Nothing-Tim-Kreider/dp/1439198713) by Tim Kreider _recommended by David Kadavy_
