Added The Name of the Wind

--- a/books/2016.md
+++ b/books/2016.md
@@ -85,6 +85,8 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
   - A strange book. Not as well done as his others, and with some unresolved narratives that I am not sure were better for it.
 * [Orsinian Tales](https://en.wikipedia.org/wiki/Orsinian_Tales) by Ursula K. Le Guin.
   - These were beautiful, finely crafted short stories. Rarely for me, I read a few of them immediately after I finished them, to make sure that I got the more subtle details. The writing was absolutely exquisite.
+* [The Name of the Wind](http://www.patrickrothfuss.com/content/books.asp) by Patrick Rothfuss.
+  - This book is great. Lots of fun. Almost as good as _Mating Habits of the Common Draccus_.
 
 I am actively looking for these books:
 
