--- a/books/2016.md
+++ b/books/2016.md
@@ -87,6 +87,8 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
   - These were beautiful, finely crafted short stories. Rarely for me, I read a few of them immediately after I finished them, to make sure that I got the more subtle details. The writing was absolutely exquisite.
 * [The Name of the Wind](http://www.patrickrothfuss.com/content/books.asp) by Patrick Rothfuss.
   - This book is great. Lots of fun. Almost as good as _Mating Habits of the Common Draccus_.
+* [The Wise Man's Fear](http://www.patrickrothfuss.com/content/books.asp) by Patrick Rothfuss.
+  - Too short, at a little over 1000 pages. Where is Doors of Stone?
 
 I am actively looking for these books:
 
@@ -97,3 +99,4 @@ I am actively looking for these books:
 * [Security Analysis](http://www.smh.com.au/business/markets/21-books-warren-buffett-thinks-you-should-read-20161103-gshv25.html) _"_
 * [Essays in Persuasion](http://www.smh.com.au/business/markets/21-books-warren-buffett-thinks-you-should-read-20161103-gshv25.html) _"_
 * [We Learn Nothing: Essays](https://www.amazon.ca/We-Learn-Nothing-Tim-Kreider/dp/1439198713) by Tim Kreider _recommended by David Kadavy_
+* [Dhalgren](https://www.goodreads.com/book/show/85867.Dhalgren?source=ebfg_sms) by Samuel Delany.
