--- a/books/2016.md
+++ b/books/2016.md
@@ -89,6 +89,9 @@ This is a list of books I have read in 2016. I will keep this list updated as I 
   - This book is great. Lots of fun. Almost as good as _Mating Habits of the Common Draccus_.
 * [The Wise Man's Fear](http://www.patrickrothfuss.com/content/books.asp) by Patrick Rothfuss.
   - Too short, at a little over 1000 pages. Where is Doors of Stone?
+* [As Colours in a Rainbow: Poems and Songs by the Legend of Hornby Island](https://www.amazon.ca/As-Colours-Rainbow-Legend-Hornby/dp/B00DLZ1JJW) by Sammy Sammy
+  - Easily the worst book I read this year.
+* [Shaking Hands With Death](http://www.terrypratchettbooks.com/book/shaking-hands-with-death/) by Terry Pratchett.
 
 I am actively looking for these books:
 
