Added two books

--- a/books/2017.md
+++ b/books/2017.md
@@ -11,3 +11,7 @@ This is a list of books I have read in 2017. I will keep this list updated as I 
 * [Sharpe's Rifles](https://en.wikipedia.org/wiki/Sharpe%27s_Rifles_(novel)) by Bernard Cornwell.
 * [Treasure Island](https://en.wikipedia.org/wiki/Treasure_Island) by Robert Louis Stevenson.
 * [Coffin Road](https://www.goodreads.com/book/show/27798536-coffin-road) by Peter May.
+* [The Wind's Twelve Quarters](https://en.wikipedia.org/wiki/The_Wind's_Twelve_Quarters) by Ursula K. Le Guin.
+  - A fantastic read, as she always is.
+* [100 Aves Argentinas](http://www.cuspide.com/9789502410142/100+Aves+Argentinas/) by Canevari Pablo, Narosky Tito.
+  - More of a reference book. Saw around 1/4th of the birds mentioned in this book.
